--- a/src/package.xml
+++ b/src/package.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
+        <members>ACS_Integration</members>
+        <members>ACS_Integration_Test</members>
+        <members>ACS_Request</members>
+        <members>ACS_Request_Test</members>
+        <members>ACS_WS</members>
+        <members>ACS_WS_Test</members>
         <members>Hotrod_Dealer</members>
         <members>Hotrod_Dealer_Test</members>
         <members>Hotrod_Heroku</members>
@@ -14,14 +20,42 @@
         <name>ApexClass</name>
     </types>
     <types>
+        <members>acs_actions</members>
+        <name>ApexPage</name>
+    </types>
+    <types>
         <members>HRD_Account_Sync</members>
         <members>HRD_Primary_Contact_Validation</members>
         <members>Hotrod_Primary_Contact</members>
         <name>ApexTrigger</name>
     </types>
     <types>
+        <members>ACS_REST_Parameters__c</members>
+        <members>Account</members>
+        <members>Contact</members>
+        <members>Lead</members>
         <members>NI_REST_Parameters__c</members>
         <name>CustomObject</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>EmailTemplate</name>
+    </types>
+    <types>
+        <members>API User Profile</members>
+        <name>Profile</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>RemoteSiteSetting</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>Role</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>Workflow</name>
     </types>
     <version>24.0</version>
 </Package>
